--- a/tex/math.tex
+++ b/tex/math.tex
@@ -11,7 +11,8 @@ Depending on the context, a variable can be a scalar value, a vector, or a matri
   	Bold, lower case & $\boldsymbol{a}$ & A vector\\
   	Bold, upper case & $\boldsymbol{A}$ & A matrix\\
   	Curved brackets with a point & $a(\cdot)$ & A function, where $(\cdot)$ is a placeholder for a variable\\
-  	Rectangular brackets after a variable & $a[t]$ & Variable $a$ at time $t$\\
+  	Rectangular brackets after a variable & $a[t]$ & Depending on the context, either variable $a$ at time $t$\\
+  	                                      & $\boldsymbol{x}[c]$ & or variable $\boldsymbol{x}$ is from class $c$\\
   	Superscript rectangular brackets & $a^{[l]}$ & $l$ is the index of the layer, e.g. $\boldsymbol{W}^{[l]}$ is the weight matrix of layer $l$\\
   	Superscript curved brackets & $a^{(i)}$ & $i$ is the index of the sample, e.g. $\boldsymbol{x}^{(i)}$ is the$i$-th sample of a data set\\
 \end{tabular}
@@ -22,6 +23,8 @@ Depending on the context, a variable can be a scalar value, a vector, or a matri
 \begin{tabular}{ p{3cm} p{11cm} }
 	\textbf{Variable} & \textbf{Meaning}\\
 	\hline
+	$\beta$ & The weight factor of the Kullback-Leibler term in the loss of a variational autoencoder\\
+	$\lambda$ & The weight factor for loss terms\\
 	$\eta$ & The learning rate of an optimization algorithm\\
 	$\rho$ & The desired activation probability\\
 	$\hat{\rho}_i$ & The activation probability of a neuron $i$\\
@@ -32,7 +35,7 @@ Depending on the context, a variable can be a scalar value, a vector, or a matri
 	$b$ & The bias of a single neuron\\
 	$\boldsymbol{b}$ & The bias of a network layer\\
 	$C$ & The set of classes of a classification task\\
-	$h$ & The latent representations of a network that are typically used in a subsequent downstream task\\
+	$\boldsymbol{h}$ & The latent representations of a network that are typically used in a subsequent downstream task\\
 	$k$ & The number of neurons within a layer\\
 	$L$ & The number of layers of a network\\
 	$l$ & The index of a layer, e.g. $\boldsymbol{W}^{[l]}$ is the weight matrix of layer $l$\\
@@ -42,6 +45,7 @@ Depending on the context, a variable can be a scalar value, a vector, or a matri
 	$w_{ij}$ & The weight between neuron $i$ and neuron $j$\\
 	$\boldsymbol{w} = (w_1, ..., w_n)$ & A weight vector of a neuron\\
 	$\boldsymbol{W} = (\boldsymbol{w}_1, ..., \boldsymbol{w}_k)$ & A weight matrix of a network layer\\
+	$$\boldsymbol{X} = \boldsymbol{x}^{(1)}, ..., \boldsymbol{x}^{(m)}$ & A dataset with $m$ samples\\
 	$\boldsymbol{x} = (x_1, ..., x_n)$ & An input sample that is fed into a model or a network layer, typically a vector of length $n$\\
 	$\boldsymbol{y}$ & The expected output of a model or a network layer (i.e. the ground truth), typically a vector ($\boldsymbol{y}$) for a multi-class classification task or a scalar value ($y$) for a regression or single-class classification task\\
 	$\boldsymbol{\hat{y}}$ & The actual output of a model or a network layer (i.e. the prediction), typically a vector ($\boldsymbol{\hat{y}}$) for a multi-class classification task or a scalar value ($\hat{y}$) for a regression or single-class classification task (in a multi-layer network, the output of an intermediate layer is typically denoted as $\boldsymbol{a}$)\\
